css/main.css
/* ... */
.status_info a{color:#999;font-size:11px;text-decoration:none}
.status_info span{display:inline-block;margin:0 0 3px;padding:0 1px}
.status_info span.source{display:inline;max-width:180px;overflow:hidden;padding-right:3px;white-space:nowrap}
.embr{color:#3CF!important}
.timeline li:hover,.rank_list li:hover{background-color:#F2F2F2}
.status_author{height:48px;left:5px;padding:1px;position:absolute;width:48px}
li.loading .status_author,li.loading .rank_img{background:url("../img/spinner.gif") no-repeat scroll center center transparent!important;outline:4px solid #BBB}
li.loading #avatar{opacity:0.2}
.rank_img{top:15px;left:10px;position:absolute;width:48px;height:48px}
.status_author img,.rank_img img,#avatar{height:48px;width:48px;border-radius:5px}

#thumb_pic{display:block;margin:5px 0}
#thumb_pic img{padding:3px;border:1px solid #ccc;max-width:420px;max-height:420px;box-shadow:0 1px 2px rgba(0,0,0,.25);-webkit-box-shadow:0 1px 2px rgba(0,0,0,.25)}
.hashtag{font-weight:700}
#empty{font-size:16px;font-weight:700;margin:50px;text-align:center}
#description{font-size:14px;padding:10px}
#description p{line-height:22px;margin:15px}
.big-retweet-icon{background-image:url(../img/sprite-icons.png);background-position:-128px -64px;background-repeat:no-repeat;display:inline-block;height:14px;position:relative;top:2px;width:18px}
/*new below*/
.ajax_form{background-color:#FFF;border:1px solid #A7A6AA;float:left;margin:5px 0 5px -1px;padding:0;width:520px}
.ajax_form li{border-top:1px solid #EFEFEF;cursor:default;display:block;float:left;margin:0;overflow:visible;padding:5px 25px 5px 0;position:relative;width:495px}
.ajax_form li .status_author{height:30px;left:5px;margin-left:5px;margin-top:6px;padding:1px;position:absolute;width:30px}
.ajax_form li .status_body{display:block;line-height:22px;margin-left:50px;margin-right:5px;overflow:hidden;position:relative}
/*pagination*/
#pagination{margin:5px}
#pagination p.no-more-tweets{font-size:1.1em;text-align:center}
.more{background-color:#FFF;background-image:url(../img/more.gif);background-position:left top;background-repeat:repeat-x;border-color:#DDD #AAA #AAA #DDD;border-style:solid;border-width:1px;display:block;font-size:14px;font-weight:700;height:22px;line-height:1.5em;margin-bottom:6px;outline-color:0;outline-style:none;outline-width:medium;padding:6px 0;text-align:center;text-shadow:1px 1px 1px #FFF;width:45%}
.more:hover{background-position:left -78px;border:1px solid #bbb;text-decoration:none}
.more:active{background-position:left -38px;color:#666}
.more.loading{background-color:#fff;background-image:url(../img/ajax.gif);background-position:50% 50%;background-repeat:no-repeat;border:1px solid #eee;cursor:default!important}
.more::-moz-focus-inner{border:0}
#pagination.pagination{height:1.5em}
#pagination.pagination a,#pagination.pagination .link-like{border:1px solid #cecece;float:right;margin:0 0 0 10px;padding:.25em 1em}

/*sidebar*/
#side_base{border-radius:0 5px 5px 0;background-color:#DDEEF6;border-left:1px solid #C0DEED;line-height:1.2;vertical-align:top;width:198px}
#side{border-radius:0 5px 5px 0;float:left;font-size:90%;margin:0 -2px;overflow:hidden;padding-top:.5em;width:198px}
#sideimg{float:left;margin:10px 10px 10px 15px;height:40px;width:40px;border-radius:5px;box-shadow:0 1px 2px rgba(0,0,0,.25);-webkit-box-shadow:0 1px 2px rgba(0,0,0,.25)}
#sideid{display:block;padding:10px 0 0 18px;margin-bottom:5px}
#side_name{font:bold 1.3em/1.3em Helvetica Neue,Helvetica,sans-serif;color:#2276BB;margin-right:1px}
#profileRefresh i{background:url(../img/refresh.png) no-repeat;width:16px;height:16px;display:inline-block}
.refreshing i{background:url(../img/ajax.gif)!important}
#me_tweets{font-family:Helvetica,Arial,sans-serif;font-size:90%}
#update_count{font-weight:700}
#user_stats{clear:both;padding:0 0 0 10px}
#user_stats li{display:inline-block;float:left;overflow:hidden;padding:0 5px;width:48px}
.count{display:block;font:bold 13px Helvetica Neue,Helvetica,Arial,sans-serif}
.label{display:block;font-size:11px}
#sidenav{border-top:1px solid #CCC;margin:0}
#sidenav a{background-color:#F4F4F4;border-bottom:1px solid #CCC;color:#000;display:block;font-size:13px;font-weight:700;padding:10px;text-decoration:none}
h3{font-size:14px;margin:14px 0 0 14px}
#sidepost{margin:0;padding-bottom:0}
#sidepost li{font-size:12px;line-height:18px;margin:12px 10px}
#side .promotion{background-color:#EDFEFF;font-size:12px;margin:.5em auto;padding:6px 10px;text-align:left;width:152px}
#side .promotion a{color:#333;font-size:11px;outline-style:none;outline-width:medium}
#side .promotion a.definition:hover strong{font-size:11px;outline-style:none;outline-width:medium;text-decoration:underline}
#side .promotion .definition strong{color:#2276BB;display:block;font-size:11px}
#indicator{cursor:pointer}
#tip_reset{text-decoration:underline;cursor:pointer}
#tip_reset:hover{color:red}
#sidebarTip_more{display:none}
#side .notice{background-color:#FFF;margin:.5em auto 1em;padding:10px;text-align:center}
#side div.section{padding:13px}
#side div#profile.section{margin-bottom:0;padding:.2em}
#side div.last{border-top:1px solid #C0DEED}
#side h1{color:#333;font-size:1.1em;margin-bottom:.5em;padding:0 0 2px}
#side div.section-header h3{border-bottom:1px solid #C0DEED;color:#333;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;font-size:16px;font-size-adjust:none;font-stretch:normal;font-style:normal;font-variant:normal;font-weight:400;line-height:18px}
#side .section-links{float:right;font-size:.9em;text-align:right}
#side div.msg strong{display:block;font-size:1.4em}
#side div.msg h3{font-size:1.25em}
#side ul{margin:0}
#side .faq-index ul{list-style-type:square;margin-left:15px}
#side .faq-index li{margin:10px 0}
#side p{padding:.5em 10px}
#side div#profile.profile-side{margin-bottom:1em!important}
#side .profile-side .about{margin-bottom:.6em}
#side div.user_icon a,#side div.user_icon a:hover{color:#333;text-decoration:none}
/* ... */

